# mrp-paper

./: .gitignore  README.md  pyproject.toml
paper/: paper.aux  paper.md  paper.tex
results/baseline_audit/: margin_audit_fp32.json
results/run10_fisher_0.3/: margin_audit_fp32.json  train_summary.json
results/run11_fisher_0.6/: margin_audit_fp32.json  train_summary.json
results/run12_fisher_1.0/: margin_audit_fp32.json  train_summary.json
results/run13_fisher_2.0/: margin_audit_fp32.json  train_summary.json
results/run4_marginmax_1.0/: margin_audit_fp32.json  train_summary.json
results/run6_marginmax_0.3/: margin_audit_fp32.json  train_summary.json
results/run7_marginmax_0.1/: margin_audit_fp32.json  train_summary.json
results/run8_marginmax_0.15/: margin_audit_fp32.json
results/run9_fisher_0.15/: margin_audit_fp32.json
scripts/analysis/: fisher_boundary_rotation.py  fisher_frequency_flip_audit.py  frequency_class_flip_audit.py  geometry_audit.py  token_class_flip_audit.py
scripts/diagnostics/: bf16_margin_repro.py
scripts/eval/: run_benchmarks.py  run_eval_suite.py
src/mrp/: audit.py  cli.py  curvature.py  eval.py  eval_artifacts.py  eval_harness.py  eval_suites.py  extract.py  fisher.py  intrinsic_dimension.py  margin_metrics.py  model_inspection.py  model_loading.py  phase1.py  shared.py  training.py  training_v2.py  utils.py
src/mrp/tracker/: __init__.py  events.py  state.py
