[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrp"
version = "0.1.0"
description = "Geometric Properties of the Voronoi Tessellation in Latent Semantic Manifolds of Large Language Models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=2.19",
  "numpy>=1.26",
  "scipy>=1.12",
  "torch>=2.4",
  "tqdm>=4.66",
  "transformers>=4.45",
]

[project.optional-dependencies]
eval = [
  "accelerate>=0.33",
  "lm-eval>=0.4.5",
]
train = ["accelerate>=0.33"]
viz = [
  "matplotlib>=3.8",
  "scikit-learn>=1.5",
]

[project.scripts]
mrp = "mrp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
